--- a/src/app/modules/cms-panel-module/pages/dashboard-cms-page/dashboard-cms-page.component.scss
+++ b/src/app/modules/cms-panel-module/pages/dashboard-cms-page/dashboard-cms-page.component.scss
@@ -24,6 +24,7 @@
     grid-gap: 1px;
     background-color: var(--extraLightGrayColor);
     height: 100%;
+    width: 100%;
     .cms-dashboard__grid-element {
         padding: 30px;
         background-color: var(--mainWhiteColor);
